--- a/app/views/bank_statements/_reconcile.html.slim
+++ b/app/views/bank_statements/_reconcile.html.slim
@@ -33,7 +33,7 @@
       .strong=  "Balances (#{to_money @reconcile.checking_ending_balance} + (#{to_money @reconcile.uncleared_balance*-1}) + (#{to_money @reconcile.range_reconciled_balance*-1}) - #{to_money @reconcile.bank_ending_balance})  = #{to_money difference} "
     .s4.w3-col
         - if difference.zero? && Date.current >= @bank_statement.statement_date
-          button.w3-button.w3-blue-gray  = link_to 'Reconcile', update_reconcile_bank_statement_path(@bank_statement)
+          button.w3-button.w3-blue-gray  = link_to 'Reconcile', update_reconcile_bank_statement_path(@bank_statement, turbo_frame: "_top")
         - else
           .annotate Balance is either not zero or current date is less than the closing date
 
