forgot small in mobile ledger

--- a/app/views/accounts/ledger/_ledger.html.slim
+++ b/app/views/accounts/ledger/_ledger.html.slim
@@ -12,7 +12,7 @@ div.pt-1.text-sm.md:text-base
       td.text-right Difference:
       td.tleft.under =to_money summary[:balance]
 div.md:hidden
-  .grid.grid-cols-3.gap-2.text-base.text-sm
+  .grid.grid-cols-3.gap-2.text-sm
     - lines.reverse.each_with_index do |row,i|
       div.border-b.border-black.col-span-2 
         div 
