--- a/app/views/reports/profit_loss.html.slim
+++ b/app/views/reports/profit_loss.html.slim
@@ -1,11 +1,12 @@
 .w3-container.w3-white.min-height
 
   .w3-row
-    .w3-col.s7
-      .strong 
+    .w3-col.s6
+      .strong.fs8 
         = "Profit & Loss For Period Covering #{params[:from] ||= Date.today.beginning_of_year} to #{params[:to] ||= Date.today}"
         button.lime-link-button.noprint.w3-right[onclick="goBack()"] Back Page
       .fs8 = profit_loss_report(@report)
+      / div = "OPTIONS #{@report['options']}"
 javascript:
   function goBack() {
     window.history.back();
