--- a/app/views/reports/trial_balance.html.slim
+++ b/app/views/reports/trial_balance.html.slim
@@ -5,17 +5,17 @@
 /     h6.strong.malty Wilson-Parris Post - Gadsden AL
 
 .w3-container.w3-white.min-height
-  .s12.w3-col
+  div
     h3.strong.text-center 
       = "Trial Balance"
       button.lime-link-button.noprint.fs8.w3-right[onclick="goBack()"] Back Page
 
 
-  .w3-col.s6
+  div
     span.indent-4.indent-8.indent-12.indent-16.indent-20.indent-24.indent-28.indent-32
     / above span to full tailwind not picking up classes in helpers
 
-    .fs8 = trial_balance_report(@report)
+    .fs8.profit-loss = trial_balance_report(@report)
 javascript:
   function goBack() {
     window.history.back();
