--- a/app/views/reports/trial_balance.html.slim
+++ b/app/views/reports/trial_balance.html.slim
@@ -11,7 +11,7 @@
       button.lime-link-button.noprint.fs8.w3-right[onclick="goBack()"] Back Page
 
 
-  div
+  div.w-7/12
     span.indent-4.indent-8.indent-12.indent-16.indent-20.indent-24.indent-28.indent-32
     / above span to full tailwind not picking up classes in helpers
 
