--- a/app/views/accounts/ledger/_ledger.html.slim
+++ b/app/views/accounts/ledger/_ledger.html.slim
@@ -66,16 +66,16 @@ div.hidden.md:block
           - else
             |Date
         th.sortable[data-action="click->sortTable#sortBy"]
-          i.fas.fa-sort.noprint
+          i.fas.fa-sort.noprint.nopointer
           |Num
         th.w30.sortable[data-action="click->sortTable#sortBy"]
-          i.fas.fa-sort.noprint
+          i.fas.fa-sort.noprint.nopointer
           |Desc
         th.w15r.sortable[data-action="click->sortTable#sortBy"]
-          i.fas.fa-sort.noprint
+          i.fas.fa-sort.noprint.nopointer
           |Account
         th.sortable[data-action="click->sortTable#sortBy"]
-          i.fas.fa-sort.noprint
+          i.fas.fa-sort.noprint.nopointer
           |R
         th Debits
         th Credits
