--- a/app/views/ofxes/show.html.slim
+++ b/app/views/ofxes/show.html.slim
@@ -13,20 +13,20 @@
         thead#sort_header
           tr
             th.strong.w-28[data-action="click->sortTable#sortBy"]
-              i.fas.fa-sort
+              i.fas.fa-sort.nopointer
               |Date
             th.numeric.strong[data-action="click->sortTable#sortBy"]
-              i.fas.fa-sort
+              i.fas.fa-sort.nopointer
               |Numb
             th.strong.w25[data-action="click->sortTable#sortBy"]
-              i.fas.fa-sort
+              i.fas.fa-sort.nopointer
               |Memo
             th.strong[data-action="click->sortTable#sortBy"] 
-              i.fas.fa-sort
+              i.fas.fa-sort.nopointer
               |FitId
             td.strong.w25 Entry
             th.numeric.strong[data-action="click->sortTable#sortBy"] 
-              i.fas.fa-sort
+              i.fas.fa-sort.nopointer
               |Amount
             td.strong Balance
         
