--- a/app/views/reports/summarypl.html.slim
+++ b/app/views/reports/summarypl.html.slim
@@ -1,12 +1,26 @@
 .w3-white
-  .grid.grid-cols-12
+  .grid.grid-cols-12.gap-2
     .col-span-7
       .strong.fs8
         = "Profit & Loss For Period Covering #{@from || params[:from] ||= Date.today.beginning_of_year} to #{@to || params[:to] ||= Date.today}"
         - unless @deposits.present?
           button.lime-link-button.w3-right.noprint[onclick="goBack()"] Back Page
-      .profit-loss
-        = profit_loss_report(@report)
+      / .profit-loss
+      /   = profit_loss_report(@report)
+      - pl_array = pl_array(@report)
+
+      table.pl.fs8
+       - pl_array.each do |row|
+         tr[class="#{row[1].nil? ? 'font-bold' : ''}"]
+           -level = row[1].to_i - 1
+
+           - row.each_with_index do |col,idx|
+             - if idx == 0
+               td[class="p#{level}"] = col
+             - elsif idx > 1
+               td.text-right.pl-8 = col
+             -else
+               td.hidden = col
 
 
     .col-span-5
