--- a/app/views/reports/trial_balance.html.slim
+++ b/app/views/reports/trial_balance.html.slim
@@ -7,11 +7,14 @@
 .w3-container.w3-white.min-height
   div
     h3.strong.text-center 
-      = "Trial Balance"
+      - if @report['options'][:from].present?
+        = "Trial Balance - from #{@report['options'][:from]} to #{@report['options'][:to]}"
+      - else
+        = "Trial Balance - All"
       button.lime-link-button.noprint.fs8.w3-right[onclick="goBack()"] Back Page
 
 
-  div.w-7/12
+  div.pdf-report
     span.indent-4.indent-8.indent-12.indent-16.indent-20.indent-24.indent-28.indent-32
     / above span to full tailwind not picking up classes in helpers
 
