--- a/app/views/layouts/_menubar.html.slim
+++ b/app/views/layouts/_menubar.html.slim
@@ -7,7 +7,7 @@
     / = link_to "About", welcome_about_path, class:"w3-bar-item w3-button" 
     = link_to "Home", root_path, class:"w3-bar-item w3-button"
 
-    - if current_user.blank?
+    - if Current.user.blank?
       = link_to "About", about_about_path, class: "w3-bar-item w3-button"
       .w3-right
         .w3-right
